fix: layout bug

--- a/whenthen-web/src/layouts/DefaultDesktop/DesktopDefault.module.scss
+++ b/whenthen-web/src/layouts/DefaultDesktop/DesktopDefault.module.scss
@@ -23,5 +23,6 @@
 }
 .childrenArea {
   vertical-align: middle;
-  z-index: -1;
+  width: 100%;
+  padding: 2%;
 }
